[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
# Rust doesn’t yet include random number functionality in its standard library. However, the Rust team does provide a rand crate with said functionality.